# RiBbiT

./: .gitignore  Makefile  Makefile.am  Pat_Makefile  TO_DO_LIST  configure.ac
datafiles/: datafile1.xml  datafile10.xml  datafile11.xml  datafile1b.xml  datafile2.xml  datafile3.xml  datafile4.xml  datafile5.xml  datafile6.xml  datafile7.xml  datafile8.xml  datafile9.xml  example_output_for_tablix.xml  oiipundi2004.xml  oiipundi_test1.xml
gmp_experimenting/: adding  adding.c
outfiles/: data1_stc_arrangement_1.html  oiipundi2004_stc_arrangement_1.html  oiipundi2004_stc_arrangement_1100.html
src/data_types/list_structures/: cuvlist.c  cuvlist.h  muvdalist.c  muvdalist.h  sandndlist.c  sandndlist.h  silist.c  silist.h  smlist  smlist.c  smlist.h  sslist.c  sslist.h  ulvlist.c  ulvlist.h  ulvlist_pc.h  ulvpclist.c  ulvpclist.h
src/data_types/misc_structures/: bct.c  bct.h  bigthing.c  bigthing.h  bigthing_old_1.c  bigthing_old_1.h  ctt.c  ctt.h  data.c  data.h
src/data_types/school_structures/: class.c  class.h  day.c  day.h  meetings.c  meetings.h  (+12 more)
src/modules/: ribbit_blocked_cells.c  ribbit_blocked_cells.h  ribbit_room_sametime.c  ribbit_subject_sameday.c  ribbit_teacher_sametime.c
src/program/: algorithm.c  algorithm.h  algorithm2.c  algorithm2.h  algorithm_old_1.c  algorithm_old_1.h  main.c  memory.c  memory.h  module.c  module.h  parse_args.c  parse_args.h  parse_xml_input.c  parse_xml_input.h  progress.c  progress.h
src/tests/: test_data_type.c  test_data_type.h  test_driver.c  test_driver_for_cuvlist.c  test_driver_for_ulvlist.c  test_silist_driver.c
