# Process this file with autoconf to produce a configure script.
AC_INIT(ribbit,[0.0.0],[pcronin@loyola.edu])
AC_CONFIG_SRCDIR([src/program/algorithm.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile src/Makefile src/program/Makefile])
AC_OUTPUT
